[tool.poetry]
name = "church-web-helper"
version = "1.5.0"
description = "A python package to make use of ChurchTools API and Communi API with a docker packaged WebUI"
authors = [
    "bensteUEM",
]
homepage = "https://github.com/bensteUEM/ChurchWebHelper"
license = "CC-BY-SA"
readme = "README.md"
include = [
    "templates/*.html",
    "static/*",
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
Flask-Session = "^0.5.0"
requests = "^2.31.0"
python-docx = "^0.8.11"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"

[tool.poetry.dependencies.churchtools-api]
git = "https://github.com/bensteUEM/ChurchToolsAPI.git"
rev = "1.5.1"

[tool.poetry.dependencies.communi-api]
git = "https://github.com/bensteUEM/CommuniAPI.git"
rev = "1.1.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.6.1"
tomli_w = "^1.0.0"
wheel = "^0.41.2"
setuptools = "^66.1.1"
autopep8 = "^2.0.4"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
